--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -854,7 +854,7 @@
 
 @Url{dolezal,
     author  = "Z. Dole\v zal",
-	title = "Text k p\v redn\' a\v sce Vybran\' e kapitoly z urychlova\v cov\' e fyziky",
+	title = "Lecture notes: Vybran\' e kapitoly z urychlova\v cov\' e fyziky",
 	url = "http://www-ucjf.troja.mff.cuni.cz/~dolezal/teach/accel/"
 }
 
@@ -900,7 +900,7 @@
 
 @Book{becvar,
 	author="F. Be\v cv\'a\v r",
-	title="Lecture notes",
+	title="Lecture notes: Metody zpracov\' an\' i fyzik\' aln\' ich m\v e\v ren\' i",
 	year="2001"
 }
 
@@ -1071,4 +1071,13 @@
 @Url{mad-x,
 	title = "The MAD-X home page",
 	url = "http://wwwslap.cern.ch/mad/"
+}
+
+@Book{riley10,
+      author       = "Riley, K. F. and Hobson, M. P.",
+      title        = "Essential Mathematical Methods for the Physical Sciences;
+                      electronic version",
+      publisher    = "Cambridge University Press",
+      address      = "Leiden",
+      year         = "2010",
 }
