--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -108,7 +108,7 @@ This definition follows, in fact, from the low-scattering-angle approximation in
 
 Since the magnetic field within the RP stations is negligible, protons follow a straight trajectory there. The relation between RP sensor measurements and the parameters of the trajectory is, therefore simple (for details see \Sc{al psi}). What is much more interesting is the proton transport from the IP to the RP stations. We will discuss it in the rest of this section.
 
-The transverse motion of protons in the LHC can be described by a solution of the Hill's equation (see e.g.~Sc.~3.3 in \bref{wilson}):
+The transverse motion of protons in the LHC can be described by a solution of the Hill's equation (see e.g.~Sc.~3.3 in \bref{wilson} or Ch.~4 in \bref{dolezal}):
 \eqref{x(s) = \sqrt{\be(s) \ep}\ \cos\big(\phi(s) + \phi_0\big)\ .}{ttm hill sol}
 We have written the solution for the horizontal direction only, for the vertical it is analogous. The solution has a form of oscillations with the amplitude given by the emittance $\ep$ (a measure of the beam size and divergence\footnote{%
 A quantity which is used more often is the normalized emittance $\ep_{\rm N} = \be\ga \ep$. $\be$ and $\ga$ are the relativistic factors, see \Eq{sm lorentz}. The advantage of the normalized emittance is that it does not change during beam acceleration, see Sc.~4.1 in~\bref{wilson}.
